--- a/.github/workflows/two.yml
+++ b/.github/workflows/two.yml
@@ -1,16 +1,11 @@
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: [ONE-YAML]
+    types:
+      - completed
 
 jobs:
-   on-success:
+   CodeQL:
      runs-on: ubuntu-latest
-     if: ${{ github.event.workflow_run.conclusion == 'success' }}
      steps:
-       - run: echo "First workflow was a success"
-
-   on-failure:
-     runs-on: ubuntu-latest
-     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-     steps:
-       - run: echo "First workflow was a failure"
+       - run: echo "Running CodeQL"
